--- a/{{cookiecutter.projectDirectory}}/.swiftlint.yml
+++ b/{{cookiecutter.projectDirectory}}/.swiftlint.yml
@@ -14,6 +14,7 @@ disabled_rules:
     - superfluous_disable_command
     - identifier_name
     - weak_delegate
+    - trailing_comma
     #- operator_whitespace
     #- vertical_whitespace
     #- function_parameter_count
