--- a/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Settings.bundle/com.mono0926.LicensePlist/Logbook.plist
+++ b/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Settings.bundle/com.mono0926.LicensePlist/Logbook.plist
@@ -1,6 +1,14 @@
-MIT License
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>PreferenceSpecifiers</key>
+	<array>
+		<dict>
+			<key>FooterText</key>
+			<string>MIT License
 
-Copyright (c) 2022 aaa - all about apps GmbH
+Copyright (c) 2019 aaa - all about apps GmbH
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -19,3 +27,10 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
+</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+	</array>
+</dict>
+</plist>
