--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -76,6 +76,7 @@ workflows:
         - is_clean_build: 'yes'
         - automatic_code_signing: api-key
         - register_test_devices: 'yes'
+        - artifact_name: {{cookiecutter.projectName}}-Dev
         - scheme: "$BITRISE_SCHEME_DEV"
         title: Dev - Xcode Archive & Export
     - deploy-to-bitrise-io:
@@ -97,6 +98,7 @@ workflows:
         - is_clean_build: 'yes'
         - automatic_code_signing: api-key
         - register_test_devices: 'yes'
+        - artifact_name: {{cookiecutter.projectName}}-Staging
         - scheme: "$BITRISE_SCHEME_STAGING"
         title: Staging - Xcode Archive & Export
     - xcode-archive:
@@ -106,6 +108,7 @@ workflows:
         - is_clean_build: 'yes'
         - automatic_code_signing: api-key
         - register_test_devices: 'yes'
+        - artifact_name: {{cookiecutter.projectName}}-Live
         - scheme: "$BITRISE_SCHEME_LIVE"
         title: Live - Xcode Archive & Export
     - deploy-to-bitrise-io:
