--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -50,7 +50,7 @@ targets:
             Release-Live: {{cookiecutter.projectName}}/SupportingFiles/Configurations/Live.xcconfig
         settings:
             base:
-                PRODUCT_NAME: {{cookiecutter.projectName}}$(APP_NAME_SUFFIX)
+                PRODUCT_NAME: {{cookiecutter.projectName}}
                 MARKETING_VERSION: 1.0
                 CURRENT_PROJECT_VERSION: 1
                 TARGETED_DEVICE_FAMILY: "1"
