Implemented Debug Feature

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -66,6 +66,8 @@ targets:
               product: AuthFeature
             - package: Features
               product: ExampleFeature
+            - package: Features
+              product: DebugFeature
             - package: Core
               product: Assets
             - package: Core
