updated README, moved models to feature package

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -2,8 +2,9 @@ name: {{ cookiecutter.projectName }}
 options:
     xcodeVersion: 14.0
     groupOrdering:
-        - order: [{{ cookiecutter.projectName }}, Modules]
+        - order: [Modules, {{ cookiecutter.projectName }}]
     localPackagesGroup: Modules
+fileGroups: [README.md]
 configs:
     Debug-Dev: debug
     Debug-Staging: debug
