--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -1,6 +1,6 @@
 name: {{ cookiecutter.projectName }}
 options:
-    xcodeVersion: 13.4
+    xcodeVersion: 14.3
     groupOrdering:
         - order: [{{ cookiecutter.projectName }}, Modules]
     localPackagesGroup: Modules
@@ -82,6 +82,7 @@ targets:
                     echo "warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint"
                   fi
               name: SwiftLint
+              basedOnDependencyAnalysis: false
             - script: |
                   export PATH="$PATH:/opt/homebrew/bin"
 
@@ -99,6 +100,7 @@ targets:
                     echo "warning: license-plist not installed, download from https://github.com/mono0926/LicensePlist"
                   fi
               name: Generate Licenses
+              basedOnDependencyAnalysis: false
             - script: |
                   #case "${SERVER_ENVIRONMENT}" in
                   #
@@ -115,6 +117,7 @@ targets:
                   #;;
                   #esac
               name: Copy GoogleService-Info
+              basedOnDependencyAnalysis: false
 schemes:
     {{cookiecutter.projectName}} Dev:
         build:
