--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -31,14 +31,43 @@ workflows:
         inputs:
         - upgrade: 'no'
         - cache_enabled: 'yes'
-        - packages: swiftlint
-        title: 'Brew install: SwiftLint'
+        - packages: swiftgen
+        title: 'Brew install: SwiftGen'
     - brew-install:
         title: 'Brew install: XcodeGen'
         inputs:
         - upgrade: 'no'
         - cache_enabled: 'yes'
         - packages: xcodegen
+    - yarn:
+        inputs:
+        - command: global add texterify
+        title: Install Texterify CLI
+    - script:
+        title: Update Texterify Strings
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            set -e
+            # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit successfully
+            set -o pipefail
+            # debug log
+            set -x
+
+            # write your script here
+            # download texterify strings
+            if texterify download --auth-email="$AAA_TXTY_AUTH_EMAIL" --auth-secret="$AAA_TXTY_AUTH_SECRET"
+            then
+                # generate strings
+                swiftgen
+            else
+                BRed='\033[1;31m' # Red Bold
+                NC='\033[0m' # No Color
+                echo -e "${BRed} Texterify Download failed! Check texterify.json if the project_id is correctly set up. ${NC}"
+            fi
+
+            exit 0
     - cache-push: {}
     - remote-script-runner:
         inputs:
