--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -37,8 +37,8 @@ packages:
     Core:
         path: Modules/Core
     ForceUpdate:
-        url: https://github.com/allaboutapps/force-update-ios
-        from: 1.0.0
+        url: "https://github.com/allaboutapps/force-update-ios"
+        from: 1.0.1
     DebugView:
         url: "https://github.com/allaboutapps/debugview-ios"
         from: 1.0.0
